# Platformer

./: .gitignore  Cargo.toml
assets/maps/: map-2.tmx  map-3.tmx  test.tmx  test.tsx  tileset.tsx  tileset2.tsx
resources/config/: display_config.ron  keybindings.ron
resources/sprites/: logo.ron
src/: bundle_loader.rs  main.rs  state.rs
src/components/: components.rs
